--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -31,7 +31,8 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-
+            
+            <Button Text="Delete Item" MaximumWidthRequest="300" Clicked="OnDeleteItemButtonClicked"/>
             <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300" Clicked="OnChooseButtonClicked"/>
         </StackLayout>
     </ContentPage.Content>
